added filter method
